fixed size and spacing issues for Home component, made large screen flex-direction:row

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,30 +1,35 @@
 .home-wrapper {
   width: 85vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 
   img {
-    height: 48vw;
-    width: 72vw;
+    height: 30vw;
+    width: 45vw;
     margin-bottom: 10px;
+    border-radius: 10px;
   }
 
   .greeting-wrapper {
-    height: auto;
-    width: 80vw;
+    height: 20vw;
+    width: 30vw;
+    margin-left: 30px;
     padding: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(252, 247, 240);
+    color: $color-brick;
+    background-color: #d8d3c9;
     border-radius: 10px;
+    box-shadow: inset 1px 2px 15px 1px rgba(148, 150, 80, 0.688);
 
     span {
-      height: 50%;
+      height: auto;
       width: auto;
-      font-size: calc((40vw) / 20);
+      font-size: calc((30vw) / 18);
+
       text-align: left;
       text-indent: 30px;
       word-spacing: 0.2em;
@@ -43,12 +48,18 @@
     align-items: center;
 
     img {
-      height: 80vw;
-      width: 80vw;
+      height: 84vw;
+      width: 84vw;
     }
     .greeting-wrapper {
+      height: 48vw;
+      width: 72vw;
+      margin-left: 0px;
+      margin-top: 10px;
+      padding: 15px;
+
       span {
-        width: 80vw;
+        text-align: center;
         font-size: calc((80vw) / 20);
       }
     }
